Adding required features and test